--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ Html{
     font-size: 14pt;
     color: var(--text-color);
     scroll-behavior: smooth;
+    overflow-x: hidden;
 }
 body{
     font-family:"Inter", sans-serif;
@@ -29,14 +30,15 @@ header{
     position: relative;
     display: flex;
     align-items: center;
-    justify-content: center;
+    justify-content:center;
 }
 header .container{
     display: flex;
     flex-direction:row-reverse ;
     justify-content: center;
-    padding-top: 40px;
-    border: #d52c3a solid;
+    position: relative;
+    width: 70%;
+    padding: 15px;
     }
 header img{
     height: 20vw;
@@ -64,17 +66,15 @@ header h1{
 }
 header h2{
     color: #ffffff;
-    margin-top: 15px;
-    margin-bottom: 15px;
+    margin: 15px 0 15px 0;
     text-transform: uppercase;
 }
 header p{
     color:rgb(255, 255, 255);
 }
 header .read-more{
-    display: inline-block;
     color:rgb(244, 237, 237);
-    font-size: 1rem;
+    font-size: 0.7rem;
     font-weight:bold;
     border-radius:5px;
     padding: 9px;
@@ -86,7 +86,7 @@ header .read-more{
 header .read-more:hover{
     background-color: var(--secondary-text-color);
     color: white;
-    font-size: 20px;
+    font-size: 14px;
 }
 .time{
     position: absolute;
@@ -108,7 +108,6 @@ header .read-more:hover{
     display: flex;
     flex-direction: column;
     gap: 25px;
-    height: 100vh;
 }
 .click_here{
     color:rgb(255, 255, 255);
@@ -124,7 +123,7 @@ header .read-more:hover{
     font-size: 20px;
 }
 #skill-section h2{
-    font-size:3rem;
+    font-size:2.5rem;
     text-align: center;
     color:#f2efef;
     padding: 20px;
@@ -164,8 +163,6 @@ header .read-more:hover{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    padding: 60px 10px;
-    min-height: 100vh;
 }
 .flex-container{
     display: flex;
@@ -175,7 +172,7 @@ header .read-more:hover{
 #project-section h2{
     color:#ffffff;
     font-size: 2rem;
-    padding: 25px;
+    padding: 30px;
 }
 details{
     width:850px;
@@ -209,10 +206,13 @@ details .number{
     font-weight: 700;
 }
 details h3{
-    font-size: 1.5rem;
+    font-size: 1.3rem;
 }
 details .text-container{
-    padding: 30px;
+    padding: 30px 20px;
+}
+details .text-container li, p, pre{
+    flex-wrap: wrap;
 }
 .click_on_me{
     color:rgb(255, 255, 255);
@@ -232,19 +232,17 @@ footer{
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
-    height: 100vh;
 }
 footer #grid-container{
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: 105px;
-    padding-top: 35px;
     overflow: hidden;
 }
 .det{
     display: flex;
-    justify-content: space-around;
+    justify-content:space-around;
+    padding: 5px 5px 30px 5px;
 }
 .det a{
     color: white;
@@ -266,11 +264,9 @@ footer #grid-container{
 .social{
     display: flex;
     justify-content: space-around;
-    font-size: 35px;
-    padding: 60px;
 }
 .social a{
-    color: white;
+    color: rgb(255, 255, 255);
 }
 .social a:hover{
     font-size: 30px;
@@ -280,7 +276,7 @@ footer #grid-container{
 .CV{
     text-decoration: none;
     transition: 1000ms ease;
-    font-size: 28px;
+    font-size: 20px;
     font-weight: bold;
 }
 .CV:hover{
@@ -307,7 +303,7 @@ footer #grid-container{
     }
     .standort{
         transition: 500ms ease;
-        font-size: 35px;
+        font-size: 22px;
     }
     .standort:hover{
         color: #f06e04;
@@ -323,28 +319,52 @@ footer #grid-container{
         font-size: 45px;
         transform: rotate(360deg);
     }
-    @media(max-width: 380px ){
-            .skill-container li{
-                font-size: 16px;
+    @media( max-width: 400px){
+        header .container{
+            flex-direction: column;
+            gap: 10px;
         }
-        #project-section h2{
-            font-size: 2rem;
+        header h1{
+            font-size: 1.5rem;
         }
-        details{
-            font-size: 13px;
-            padding: 0;
-            overflow: hidden;
-        }
-        details .number{
-            font-size: 15px;
-        }
-        details h3{
+        header h2{
             font-size: 1rem;
         }
-    }
-    @media(max-width: 774px ){
-        details{
-            font-size: 15px;
-            overflow: hidden;
+        header p{
+            font-size: .8rem;
         }
+        header img{
+            height: 45vw;
+            width: 45vw;
+        }
+        details{
+            width: 100%;
+        }
+        details h3{
+            font-size:.8rem;
+        }
+        details .text-container{
+            width: 100%;
     }
+    details .text-container li, p, pre{
+        font-size:12px;
+    }
+    details summary{
+        width: 100%;
+        gap: 5px;
+        padding: 15px;
+    }
+    details .number{
+        min-height: 40px;
+        min-width: 40px;
+    }
+    #project-section h2{
+        font-size: 1.5rem;
+    }
+    .wrapper .skill-container ul li{
+        font-size: 15px;
+    }
+    .wrapper .skill-container progress{
+        font-size: 15px;;
+    }
+}
