--- a/style.css
+++ b/style.css
@@ -264,6 +264,7 @@ footer #grid-container{
 .social{
     display: flex;
     justify-content: space-around;
+    padding: 20px 0 60px 0;
 }
 .social a{
     color: rgb(255, 255, 255);
