--- a/style.css
+++ b/style.css
@@ -1,488 +1,484 @@
-:root{
-    --accent-color: #d52c3a;
-    --primary-color: #1B1C1F;
-    --secondary-color: #101113;
-    --text-color: #d9d9d9;
-    --secondary-text-color: #7f8082;
+:root {
+  --accent-color: #d52c3a;
+  --primary-color: #1b1c1f;
+  --secondary-color: #101113;
+  --text-color: #d9d9d9;
+  --secondary-text-color: #7f8082;
 }
-*{
-    margin: 0px;
-    padding: 0px;
+* {
+  margin: 0px;
+  padding: 0px;
 }
-Html{
-    font-family:Arial, Helvetica, sans-serif;
-    font-size: 14pt;
-    color: var(--text-color);
-    scroll-behavior: smooth;
-    overflow-x: hidden;
+Html {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 14pt;
+  color: var(--text-color);
+  scroll-behavior: smooth;
+  overflow-x: hidden;
 }
-body{
-    font-family:"Inter", sans-serif;
-    min-height: 100vh;
-    background:#edfcff;
+body {
+  font-family: "Inter", sans-serif;
+  min-height: 100vh;
+  background: #edfcff;
 }
-header{
-    background-image: url(head.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    height: 100vh;
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content:center;
+header {
+  background-image: url(head.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  height: 100vh;
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
-header .container{
-    display: flex;
-    flex-direction:row-reverse ;
-    justify-content: center;
-    position: relative;
-    width: 70%;
-    padding: 15px;
-    }
-    .first_child_container{
-        width: 600px;
-
-    }
-header img{
-    height: 20vw;
-    width: 20vw;
-    box-shadow: red 1px 1px 10px;
-    border-radius: 50%;
-    transition: 0.5s;
-    animation: floatImg 4s ease-in-out infinite;
+header .container {
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: center;
+  position: relative;
+  width: 70%;
+  padding: 15px;
 }
-header img:hover{
-    box-shadow: 1px 2px 20px green;
+.first_child_container {
+  width: 600px;
+}
+header img {
+  height: 20vw;
+  width: 20vw;
+  box-shadow: red 1px 1px 10px;
+  border-radius: 50%;
+  transition: 0.5s;
+  animation: floatImg 4s ease-in-out infinite;
+}
+header img:hover {
+  box-shadow: 1px 2px 20px green;
 }
 @keyframes floatImg {
-    0%,
-    100%{
-        transform: translateY(0rem);
-    }
-    50% {
-        transform: translateY(-1.4rem);
-    }
+  0%,
+  100% {
+    transform: translateY(0rem);
+  }
+  50% {
+    transform: translateY(-1.4rem);
+  }
 }
-header h1{
-    font-size: 3rem;
-    color:#ffffff;
+header h1 {
+  font-size: 3rem;
+  color: #ffffff;
 }
-header h2{
-    color: #ffffff;
-    margin: 15px 0 15px 0;
-    text-transform: uppercase;
+header h2 {
+  color: #ffffff;
+  margin: 15px 0 15px 0;
+  text-transform: uppercase;
 }
-header p{
-    color:rgb(255, 255, 255);
+header p {
+  color: rgb(255, 255, 255);
 }
-header .read-more{
-    color:rgb(244, 237, 237);
-    font-size: 0.7rem;
-    font-weight:bold;
-    border-radius:5px;
-    padding: 9px;
-    cursor: pointer;
-    transition:1000ms ease;
-    text-decoration: none;
-    box-shadow: 0px 0px 5px;
+header .read-more {
+  color: rgb(244, 237, 237);
+  font-size: 0.7rem;
+  font-weight: bold;
+  border-radius: 5px;
+  padding: 9px;
+  cursor: pointer;
+  transition: 1000ms ease;
+  text-decoration: none;
+  box-shadow: 0px 0px 5px;
 }
-header .read-more:hover{
-    background-color: var(--secondary-text-color);
-    color: white;
-    font-size: 14px;
+header .read-more:hover {
+  background-color: var(--secondary-text-color);
+  color: white;
+  font-size: 14px;
 }
-.time{
-    font-size: 45px;
-    font-weight: bold;
-    width: 300px;
-    color:#ffffff;
-    filter: blur(2px);
-    padding: 10px;
+.time {
+  font-size: 45px;
+  font-weight: bold;
+  width: 300px;
+  color: #ffffff;
+  filter: blur(2px);
+  padding: 10px;
 }
-#skill-section{
-    background-image: url(file.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    padding: 80px 20px 150px 20px;
-    display: flex;
-    flex-direction: column;
-    gap: 25px;
+#skill-section {
+  background-image: url(file.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  padding: 80px 20px 150px 20px;
+  display: flex;
+  flex-direction: column;
+  gap: 25px;
 }
-.click_here{
-    color:rgb(255, 255, 255);
-    text-decoration: none;
-    padding: 5px;
-    border-radius: 20px;
-    text-shadow: 2px 3px 15px rgb(0, 185, 247);
-    transition: 1000ms ease;
-    text-align: center;
+.click_here {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  padding: 5px;
+  border-radius: 20px;
+  text-shadow: 2px 3px 15px rgb(0, 185, 247);
+  transition: 1000ms ease;
+  text-align: center;
 }
-.click_here:hover{
-    color: #f06e04;
-    font-size: 20px;
+.click_here:hover {
+  color: #f06e04;
+  font-size: 20px;
 }
-#skill-section h2{
-    font-size:2.5rem;
-    text-align: center;
-    color:#f2efef;
-    padding: 20px;
+#skill-section h2 {
+  font-size: 2.5rem;
+  text-align: center;
+  color: #f2efef;
+  padding: 20px;
 }
-#skill-section .wrapper{
-    display: flex;
-    justify-content: center;
-    gap: 30px;
-    flex-wrap: wrap;
+#skill-section .wrapper {
+  display: flex;
+  justify-content: center;
+  gap: 30px;
+  flex-wrap: wrap;
 }
-.skill-container{
-    width: 450px;
-    max-width: 100%;
-    background-color: rgba(144, 141, 141, 0.3);
-    background-blend-mode: multiply;
+.skill-container {
+  width: 450px;
+  max-width: 100%;
+  background-color: rgba(144, 141, 141, 0.3);
+  background-blend-mode: multiply;
 }
-.skill-container h3{
-    text-align: center;
-    text-transform: uppercase;
-    padding: 15px 0;
-    color:#f90000;
+.skill-container h3 {
+  text-align: center;
+  text-transform: uppercase;
+  padding: 15px 0;
+  color: #f90000;
 }
-.skill-container li{
-    padding: 6px;
-    display: flex;
-    justify-content: space-between;
-    font-size: 20px;
+.skill-container li {
+  padding: 6px;
+  display: flex;
+  justify-content: space-between;
+  font-size: 20px;
 }
-.skill-container ul progress{
-    accent-color: rgb(239, 36, 0);
-    font-size: 22px;
-    font-weight: bold;
-
+.skill-container ul progress {
+  accent-color: rgb(239, 36, 0);
+  font-size: 22px;
+  font-weight: bold;
 }
-#project-section{
-    background-image: url(top-view-workspace-with-agenda-pens.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+#project-section {
+  background-image: url(top-view-workspace-with-agenda-pens.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-.flex-container{
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+.flex-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
-#project-section h2{
-    color:#ffffff;
-    font-size: 2rem;
-    padding: 30px;
+#project-section h2 {
+  color: #ffffff;
+  font-size: 2rem;
+  padding: 30px;
 }
-details{
-    width:850px;
-    max-width: 100%;
-    box-shadow: 0px 1px 3px;
-    border-radius: 50px;
-    border-left: #d52c3a solid 10px;
-    border-bottom-left-radius: 25px;
-    color:#ffffff;
-    padding: 5px;
-    margin-top: 15px;
-    flex-wrap: wrap;
+details {
+  width: 850px;
+  max-width: 100%;
+  box-shadow: 0px 1px 3px;
+  border-radius: 50px;
+  border-left: #d52c3a solid 10px;
+  border-bottom-left-radius: 25px;
+  color: #ffffff;
+  padding: 5px;
+  margin-top: 15px;
+  flex-wrap: wrap;
 }
-details summary{
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    gap: 30px;
-    padding: 30px;
-    transition: 1000ms ease;
+details summary {
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  gap: 30px;
+  padding: 30px;
+  transition: 1000ms ease;
 }
-details .number{
-    background-color: var(--accent-color);
-    min-height: 50px;
-    min-width: 50px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    border-radius: 50%;
-    font-size: 1rem;
-    font-weight: 700;
+details .number {
+  background-color: var(--accent-color);
+  min-height: 50px;
+  min-width: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  font-size: 1rem;
+  font-weight: 700;
 }
-details h3{
-    font-size: 1.3rem;
+details h3 {
+  font-size: 1.3rem;
 }
-details .text-container{
-    padding: 30px 20px;
+details .text-container {
+  padding: 30px 20px;
 }
-details .text-container li, p, pre{
-    flex-wrap: wrap;
+details .text-container li,
+p,
+pre {
+  flex-wrap: wrap;
 }
-.click_on_me{
-    color:rgb(255, 255, 255);
-    text-decoration: none;
-    padding: 20px;
-    border-radius: 35px;
-    transition: 1000ms ease;
-    text-shadow: 2px 3px 15px rgb(0, 185, 247);
-
+.click_on_me {
+  color: rgb(255, 255, 255);
+  text-decoration: none;
+  padding: 20px;
+  border-radius: 35px;
+  transition: 1000ms ease;
+  text-shadow: 2px 3px 15px rgb(0, 185, 247);
 }
-.click_on_me:hover{
-    color: #f06e04;
-    font-size: 20px;
+.click_on_me:hover {
+  color: #f06e04;
+  font-size: 20px;
 }
-footer{
-    background-image: url(at.jpg);
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
+footer {
+  background-image: url(at.jpg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
-footer #grid-container{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
-    overflow: hidden;
+footer #grid-container {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  overflow: hidden;
 }
-.det{
-    display: flex;
-    justify-content:space-around;
-    padding: 5px 5px 30px 5px;
+.det {
+  display: flex;
+  justify-content: space-around;
+  padding: 5px 5px 30px 5px;
 }
-.det a{
-    color: white;
+.det a {
+  color: white;
 }
-#at_symbole{
-    font-size: 150px;
-    transition: 0.3s;
-    animation: floatat 15s ease-in-out infinite;
+#at_symbole {
+  font-size: 150px;
+  transition: 0.3s;
+  animation: floatat 15s ease-in-out infinite;
 }
 @keyframes floatat {
-0%,
-100%{
+  0%,
+  100% {
     transform: translateX(20rem);
-}
-50% {
+  }
+  50% {
     transform: translateX(-20.4rem);
+  }
 }
+.social {
+  display: flex;
+  justify-content: space-around;
+  padding: 20px 0 60px 0;
 }
-.social{
-    display: flex;
-    justify-content: space-around;
-    padding: 20px 0 60px 0;
+.social a {
+  color: rgb(255, 255, 255);
 }
-.social a{
-    color: rgb(255, 255, 255);
+.social a:hover {
+  font-size: 30px;
+  color: #f06e04;
+  transition: 1000ms ease;
 }
-.social a:hover{
-    font-size: 30px;
-    color:#f06e04;
-    transition: 1000ms ease;
+.CV {
+  text-decoration: none;
+  font-size: 20px;
+  font-weight: bold;
 }
-.CV{
-    text-decoration: none;
-    transition: 1000ms ease;
+.myemail {
+  transition: 500ms ease;
+  font-size: 35px;
+}
+.myemail:hover {
+  color: #f06e04;
+  font-size: 35px;
+  transform: rotate(360deg);
+}
+.mynum {
+  transition: 500ms ease;
+  font-size: 35px;
+}
+.mynum:hover {
+  border-radius: 20px;
+  color: #f06e04;
+  transform: rotate(45deg);
+}
+.standort {
+  font-size: 22px;
+}
+.Github {
+  transition: 500ms ease;
+  font-size: 45px;
+}
+.Github:hover {
+  color: #f06e04;
+  font-size: 45px;
+  transform: rotate(360deg);
+}
+@media (max-width: 900px) {
+  header {
+    justify-content: right;
+  }
+  header .container {
+    flex-direction: column;
+    gap: 10px;
+    height: 600px;
+  }
+  .first_child_container {
+    width: 100%;
+  }
+  header h1 {
+    font-size: 2.5rem;
+  }
+  header h2 {
+    font-size: 1.5rem;
+  }
+  header p {
+    font-size: 1rem;
+  }
+  header img {
+    height: 35vw;
+    width: 35vw;
+  }
+  details h3 {
+    font-size: 1.2rem;
+  }
+  details .text-container {
+    width: 100%;
+  }
+  details .text-container li,
+  p,
+  pre {
+    font-size: 17px;
+  }
+  details summary {
+    width: 100%;
+    gap: 5px;
+    padding: 15px;
+  }
+  details .number {
+    min-height: 40px;
+    min-width: 40px;
+  }
+  #project-section h2 {
+    font-size: 1.5rem;
+  }
+  .wrapper .skill-container ul li {
     font-size: 20px;
-    font-weight: bold;
+  }
+  .wrapper .skill-container progress {
+    font-size: 18px;
+  }
 }
-.CV:hover{
-    color: #000000;
-    font-size: 20px;
-    }
-    .myemail{
-        transition: 500ms ease;
-        font-size: 35px;
-    }
-    .myemail:hover{
-        color: #f06e04;
-        font-size: 35px;
-        transform: rotate(360deg);
-    }
-    .mynum{
-        transition: 500ms ease;
-        font-size: 35px;
-    }
-    .mynum:hover{
-        border-radius: 20px;
-        color: #f06e04;
-        transform:rotate(45deg);
-    }
-    .standort{
-        transition: 500ms ease;
-        font-size: 22px;
-    }
-    .standort:hover{
-        color: #f06e04;
-        font-size: 35px;
-        transform: rotate(360deg);
-    }
-    .Github{
-        transition: 500ms ease;
-        font-size: 45px;
-    }
-    .Github:hover{
-        color: #f06e04;
-        font-size: 45px;
-        transform: rotate(360deg);
-    }
-    @media( max-width: 900px){
-        header{
-            justify-content:right;
-        }
-        header .container{
-            flex-direction: column;
-            gap: 10px;
-            height: 600px;
-        }
-        .first_child_container{
-            width: 100%;
-        }
-        header h1{
-            font-size: 2.5rem;
-        }
-        header h2{
-            font-size: 1.5rem;
-        }
-        header p{
-            font-size: 1rem;
-        }
-        header img{
-            height: 35vw;
-            width: 35vw;
-        }
-        details h3{
-            font-size:1.2rem;
-        }
-        details .text-container{
-            width: 100%;
-    }
-    details .text-container li, p, pre{
-        font-size:17px;
-    }
-    details summary{
-        width: 100%;
-        gap: 5px;
-        padding: 15px;
-    }
-    details .number{
-        min-height: 40px;
-        min-width: 40px;
-    }
-    #project-section h2{
-        font-size: 1.5rem;
-    }
-    .wrapper .skill-container ul li{
-        font-size: 20px;
-    }
-    .wrapper .skill-container progress{
-        font-size: 18px;
-    }
-}
-    @media( max-width: 680px){
-        header{
-            justify-content:right;
-        }
-        header .container{
-            flex-direction: column;
-            gap: 10px;
-            height: 600px;
-        }
-        .first_child_container{
-            width: 100%;
-        }
-        header h1{
-            font-size: 1.5rem;
-        }
-        header h2{
-            font-size: 1rem;
-        }
-        header p{
-            font-size: .8rem;
-        }
-        header img{
-            height: 35vw;
-            width: 35vw;
-        }
-        details{
-            width: 100%;
-        }
-        details h3{
-            font-size:.8rem;
-        }
-        details .text-container{
-            width: 100%;
-    }
-    details .text-container li, p, pre{
-        font-size:12px;
-    }
-    details summary{
-        width: 100%;
-        gap: 5px;
-        padding: 15px;
-    }
-    details .number{
-        min-height: 40px;
-        min-width: 40px;
-    }
-    #project-section h2{
-        font-size: 1.5rem;
-    }
-    .wrapper .skill-container ul li{
-        font-size: 15px;
-    }
-    .wrapper .skill-container progress{
-        font-size: 15px;
-    }
+@media (max-width: 680px) {
+  header {
+    justify-content: right;
+  }
+  header .container {
+    flex-direction: column;
+    gap: 10px;
+    height: 600px;
+  }
+  .first_child_container {
+    width: 100%;
+  }
+  header h1 {
+    font-size: 1.5rem;
+  }
+  header h2 {
+    font-size: 1rem;
+  }
+  header p {
+    font-size: 0.8rem;
+  }
+  header img {
+    height: 35vw;
+    width: 35vw;
+  }
+  details {
+    width: 100%;
+  }
+  details h3 {
+    font-size: 0.8rem;
+  }
+  details .text-container {
+    width: 100%;
+  }
+  details .text-container li,
+  p,
+  pre {
+    font-size: 12px;
+  }
+  details summary {
+    width: 100%;
+    gap: 5px;
+    padding: 15px;
+  }
+  details .number {
+    min-height: 40px;
+    min-width: 40px;
+  }
+  #project-section h2 {
+    font-size: 1.5rem;
+  }
+  .wrapper .skill-container ul li {
+    font-size: 15px;
+  }
+  .wrapper .skill-container progress {
+    font-size: 15px;
+  }
 }
 
-    @media( max-width: 480px){
-        header .container{
-            flex-direction: column;
-            gap: 10px;
-            height: 600px;
-        }
-        header h1{
-            font-size: 1.5rem;
-        }
-        header h2{
-            font-size: 1rem;
-        }
-        header p{
-            font-size: .8rem;
-        }
-        .first_child_container{
-            width: 100%;
-    
-        }
-        header img{
-            height: 35vw;
-            width: 35vw;
-        }
-        details{
-            width: 100%;
-        }
-        details h3{
-            font-size:.8rem;
-        }
-        details .text-container{
-            width: 100%;
-    }
-    details .text-container li, p, pre{
-        font-size:12px;
-    }
-    details summary{
-        width: 100%;
-        gap: 5px;
-        padding: 15px;
-    }
-    details .number{
-        min-height: 40px;
-        min-width: 40px;
-    }
-    #project-section h2{
-        font-size: 1.5rem;
-    }
-    .wrapper .skill-container ul li{
-        font-size: 15px;
-    }
-    .wrapper .skill-container progress{
-        font-size: 15px;
-    }
+@media (max-width: 480px) {
+  header .container {
+    flex-direction: column;
+    gap: 10px;
+    height: 600px;
+  }
+  header h1 {
+    font-size: 1.5rem;
+  }
+  header h2 {
+    font-size: 1rem;
+  }
+  header p {
+    font-size: 0.8rem;
+  }
+  .first_child_container {
+    width: 100%;
+  }
+  header img {
+    height: 35vw;
+    width: 35vw;
+  }
+  details {
+    width: 100%;
+  }
+  details h3 {
+    font-size: 0.8rem;
+  }
+  details .text-container {
+    width: 100%;
+  }
+  details .text-container li,
+  p,
+  pre {
+    font-size: 12px;
+  }
+  details summary {
+    width: 100%;
+    gap: 5px;
+    padding: 15px;
+  }
+  details .number {
+    min-height: 40px;
+    min-width: 40px;
+  }
+  #project-section h2 {
+    font-size: 1.5rem;
+  }
+  .click_on_me{
+    display: none;
+  }
+  .wrapper .skill-container ul li {
+    font-size: 15px;
+  }
+  .wrapper .skill-container progress {
+    font-size: 15px;
+  }
 }
