--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 :root {
   --accent-color: #d52c3a;
   --primary-color: #1b1c1f;
@@ -10,14 +12,13 @@
   padding: 0px;
 }
 Html {
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Poppins", sans-serif;
   font-size: 14pt;
   color: var(--text-color);
   scroll-behavior: smooth;
   overflow-x: hidden;
 }
 body {
-  font-family: "Inter", sans-serif;
   min-height: 100vh;
   background: #edfcff;
 }
@@ -121,7 +122,6 @@ header .read-more:hover {
 }
 .click_here:hover {
   color: #f06e04;
-  font-size: 20px;
 }
 #skill-section h2 {
   font-size: 2.5rem;
@@ -152,6 +152,7 @@ header .read-more:hover {
   display: flex;
   justify-content: space-between;
   font-size: 20px;
+  text-transform: uppercase;
 }
 .skill-container ul progress {
   accent-color: rgb(239, 36, 0);
@@ -216,18 +217,6 @@ p,
 pre {
   flex-wrap: wrap;
 }
-.click_on_me {
-  color: rgb(255, 255, 255);
-  text-decoration: none;
-  padding: 20px;
-  border-radius: 35px;
-  transition: 1000ms ease;
-  text-shadow: 2px 3px 15px rgb(0, 185, 247);
-}
-.click_on_me:hover {
-  color: #f06e04;
-  font-size: 20px;
-}
 footer {
   background-image: url(at.jpg);
   background-repeat: no-repeat;
@@ -252,6 +241,7 @@ footer #grid-container {
   font-size: 150px;
   transition: 0.3s;
   animation: floatat 15s ease-in-out infinite;
+  font-family: Arial, Helvetica, sans-serif;
 }
 @keyframes floatat {
   0%,
@@ -271,7 +261,6 @@ footer #grid-container {
   color: rgb(255, 255, 255);
 }
 .social a:hover {
-  font-size: 30px;
   color: #f06e04;
   transition: 1000ms ease;
 }
@@ -307,7 +296,6 @@ footer #grid-container {
 }
 .Github:hover {
   color: #f06e04;
-  font-size: 45px;
   transform: rotate(360deg);
 }
 @media (max-width: 900px) {
@@ -446,6 +434,9 @@ footer #grid-container {
     height: 35vw;
     width: 35vw;
   }
+  #project-section{
+    overflow: hidden;
+  }
   details {
     width: 100%;
   }
@@ -458,7 +449,7 @@ footer #grid-container {
   details .text-container li,
   p,
   pre {
-    font-size: 12px;
+    font-size: 11px;
   }
   details summary {
     width: 100%;
